# articubot_one

./: CMakeLists.txt  README.md  package.xml
config/: cones.world  controller_working.rviz  drive_bot.rviz  ekf.yaml  joystick.yaml  localization_params_online_async.yaml  mapper_params_online_async.yaml  mapping.rviz  nav2_params.yaml  turtlebot3_lds_2d.lua  view_bot.rviz
description/: ekf.yaml  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
imu_covariance_override/: cartographer_pose_publisher.py  ekf_fusion_node.py  imu_covariance_override_node.py  slam_evaluator.py  toolbox_eval.py
imu_covariance_override/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
imu_covariance_override/log/: latest_build
launch/: ekf_launch.py  joystick.launch.py  launch_sim.launch.py  localization_launch.py  mapping.launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py  select_slam_launch.py
worlds/: cones.world  home.world  temp.world
